hide taxtpercent and hide other identitytype option

--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -488,7 +488,7 @@
   "upload_delivery_man_image": "Upload delivery man image",
   "delivery_man_registration_successful": "Delivery man registration successful",
   "restaurant_registration_successful": "Restaurant registration successful",
-  "passport": "Passport",
+  "passport": "Pan Card",
   "driving_license": "Driving License",
   "nid": "NID",
   "identity_type": "Identity Type",
